Fixed stats page not showing information

--- a/code/UI/Styles/stats.scss
+++ b/code/UI/Styles/stats.scss
@@ -3,22 +3,20 @@
 
 Stats {
     position: absolute;
-    left: 50%;
-    top: 46%;
-    height: 45%;
-    width: 450px;
-    transform: translate( -50% -80% );
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     font-family: $font-family-title;
     font-size: $font-size-medium;
     color: $white;
     transition: all 0.2s ease-out;
     text-shadow: 1px 1px $red;
     opacity: 0;
-    border-image: url( /ui/border.png ) 50 fill stretch;
-    border: 20px solid transparent;
-    flex-direction: column;
     z-index: 997;
+    justify-content: center;
     align-items: center;
+    align-content: center;
 
     &.open {
         opacity: 1;
@@ -29,45 +27,58 @@ Stats {
         }
     }
 
-    .rows {
+    .container {
+        position: absolute;
+        bottom: 45%;
+        height: 45%;
+        width: 450px;
         flex-direction: column;
-        padding: 8px;
-    }
-
-    .header {
-        flex-direction: column;
-        min-height: 60px;
-        margin-top: 50px;
-
-        .title {
-            font-size: $font-size-large;
-        }
-
-        .stats {
-            margin-top: 10px;
-            font-size: $font-size-medium;
-        }
-    }
-
-    .row {
-        padding: 8px;
-        margin-bottom: 10px;
-
-        .title {
-            min-width: 170px;
-        }
-    }
-
-    .button {
-        font-size: $font-size-medium;
-        width: 50%;
-        padding: 2px;
         align-items: center;
-        text-align: center;
+        border-image: url( /ui/border.png ) 50 fill stretch;
+        border: 20px solid transparent;
 
-        &:hover {
-            transform: scale(1);
-            text-shadow: $text-shadow-orange;
+
+
+        .rows {
+            flex-direction: column;
+            padding: 8px;
+        }
+
+        .header {
+            flex-direction: column;
+            min-height: 60px;
+            margin-top: 50px;
+
+            .title {
+                font-size: $font-size-large;
+            }
+
+            .stats {
+                margin-top: 10px;
+                font-size: $font-size-medium;
+            }
+        }
+
+        .row {
+            padding: 8px;
+            margin-bottom: 10px;
+
+            .title {
+                min-width: 170px;
+            }
+        }
+
+        .button {
+            font-size: $font-size-medium;
+            width: 50%;
+            padding: 2px;
+            align-items: center;
+            text-align: center;
+
+            &:hover {
+                transform: scale(1);
+                text-shadow: $text-shadow-orange;
+            }
         }
     }
 }
